deployment/mypod(1).yaml
apiVersion: v1
kind: Pod
metadata:
  name: demok8s
  namespace: myspace #если не указать, то по умолчанию будет namespace: default; именное пространство, в котором будет задеплоен под
  labels:
    app: demok8s-app #дополнительные опциональные метки, служат для привязки других структур кубернетеса
spec:
  containers:
    - name: demok8s
      image: gurok/demok8s
      ports:
        - containerPort: 8000
          name: app
        - containerPort: 9090
          name: actuator
      env: #переменные среды для запуска контейнера, переменная используется SpringBoot приложением
        - name: HEALTH_MSG
          value: "test"

      livenessProbe: #проба жизнеспособности приложения, что оно не зависло
        httpGet:
          port: 9090
          path: /health
        failureThreshold: 1
        periodSeconds: 10
      readinessProbe: #проба готовности приложения к приему трафика
        httpGet:
          port: 8000
          path: /healthcheck
        failureThreshold: 1
        periodSeconds: 10
      startupProbe: #проба старта приложения
        httpGet:
          port: 8000
          path: /healthcheck
        failureThreshold: 30
        periodSeconds: 10
