deployment/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demok8s-postgresql-statefulset
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: demok8s-postgresql
  template:
    metadata:
      labels:
        app: demok8s-postgresql
    spec:
      containers:
          - name: postgres
            image: postgres:latest
            ports:
              - containerPort: 5432
                name: postgredb
            volumeMounts:
              - name: postgredb
                mountPath: /var/lib/postgresql/data
                subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgredb
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-demok8s-postgres-service
spec:
  selector:
    app: demok8s-postgresql
  ports:
      - port: 5432
  type: ClusterIP
  clusterIP: None
